TestSuite/Scheduler/Errors/minstart.tjp
project test "Test" "1.0" 2007-03-28 +2m

task t "Task" {
	start 2007-03-29
	minstart 2007-03-30
}

